<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/et_find_user"
        android:hint="@string/enter_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <Button
        android:text="@string/find"
        android:id="@+id/button_find"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:textSize="20sp"
        android:id="@+id/text_name"
        android:text="@string/default_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:textSize="20sp"
        android:id="@+id/text_surname"
        android:text="@string/default_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:textSize="20sp"
        android:id="@+id/text_age"
        android:text="@string/default_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>